# Steel-UI-AI

./: AGENTS.md  macos_app.py
macos/SteelChatApp/: README.md  build_app.sh  pyproject.toml  setup.py
macos/SteelChatApp/macos_app_embedded/: __init__.py  backend.py  main.py  ui.py
