[build-system]
requires = ["setuptools>=68", "wheel", "py2app>=0.28"]
build-backend = "setuptools.build_meta"

[project]
name = "SteelChatApp"
version = "0.1.0"
description = "Standalone macOS bundle for SteelChat"
readme = "README.md"
authors = [{ name = "Steel Chat" }]
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "pyobjc",
  "pyobjc-framework-Cocoa",
  "pyobjc-framework-WebKit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["macos_app_embedded"]

[tool.setuptools.package-data]
macos_app_embedded = [
  "../resources/web/index.html"
]

[tool.py2app.app]
script = "macos_app_embedded/main.py"

[tool.py2app.options]
# macOS 14+ no longer ships the legacy Carbon framework that py2app uses to
# implement argv emulation. Leaving the feature enabled causes the bundled app
# to crash at launch when `ctypes` attempts to load Carbon. Disable it so the
# bundle starts normally on modern macOS releases.
argv_emulation = false
includes = ["fastapi", "uvicorn", "httpx", "pyobjc"]
resources = [
  "server.py",
  "tools.py",
  "docstore.py",
  "docstore.db",
  "index.html",
  "tmp",
  "resources"
]
